<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">欢迎使用CCBook</string>
    <string name="app_name">CCBook</string>
    <string name="bookstore">网络书库</string>
    <string name="editbook">删除</string>
    <string name="bookshelf">书架</string>
    <string name="booklist">列表</string>
    <string name="Complete">完成</string>
    <string name="Edit">删除</string>
    <string name="deletetitle">电子书文件将会被删除，是否确定?</string>
    <string name="fileNotFound">该电子书的文件不存在</string>
    <string name="isBeginning">已是最前页</string>
    <string name="isEndding">已到最后一页</string>
    <string name="isBookEnd">全书完</string>
    <string name="isChaptersEnd">此节完</string>
    <string name="updatenow">现在更新</string>
    <string name="donotupdate">以后再说</string>
    <string name="findupdate">发现可用更新</string>
    <string name="option_ok">OK</string>
    <string name="option_cancle">Cancle</string>
    <string name="bkmk_list">MyBookMark</string>
    <string name="charactor_list">字符集</string>
    <string name="catalog_list">目录</string>
    <string name="showAllList">全部</string>
    <string name="showHistory">历史</string>
    <string name="showSearch">搜索</string>
    <string name="welcomeWorld">您好，欢迎来到ccbook。\n阅读书籍请按这里</string>
	<string name="loadingErr">载入错误,请检测网络是否连通,或尝试刷新</string>
    <string name="reload">刷新</string>
    <string name="back">返回</string>
    <string name="downloadConfirm">请选择方式</string>
    <string name="downloadNow">下载</string>
    <string name="readNow">在线阅读</string>
    <string name="mark_label">书签</string>
    <string name="turnto_label">跳转</string>
    <string name="light_label">亮度</string>
    <string name="back_label">返回书库</string>
    <string name="mode_label1">横向阅读</string>
    <string name="auto_label">自动浏览</string>
    <string name="auto_label2">停止浏览</string>
    <string name="mode_label2">竖向阅读</string>
    <string name="fontTTF_list">字体</string>
    <string name="closeComment">超时自动关闭批注</string>
  	<string name="nocomment">本页没有批注</string>
  	<string name="delcomplete">删除完成</string>
  	<string name="colorPickerTitle">外圈选择颜色,内圈确定</string>
  	<string name="aboutCCBook">关于CCBook</string>
  	<string name="aboutCCBookContent">版本：V1.30\n深圳市华芯飞科技有限公司\n网址：http://www.chinachip.cn\n\nCopyright(C) 2009-2011 Chinachip.All Right Reserved.</string>
  	<string name="help">帮助</string>
  	<string name="doNotTips">下次不再提示</string>
  	<string name="turnToTips">跳转自动关闭批注</string>
  	<string name="changeFontTips">改变字体大小自动关闭批注</string>
</resources>
