<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:id="@+id/about_dialog_layout"
  android:orientation="vertical"
  >
  	<LinearLayout 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:background="@drawable/dialog_title_color"	
		android:orientation="horizontal"
		android:id="@+id/dialog">
		<ImageView android:id="@+id/dialog" 
			android:layout_margin="10dp"
			android:layout_height="30dp"
			android:layout_width="30dp"
			android:background="@drawable/icon">
		</ImageView>
		<TextView 
		android:layout_height="wrap_content"
		android:textSize="24dp"
		android:layout_marginTop="8dp"
		android:layout_width="fill_parent"	
		android:text="@string/aboutCCBook">
		</TextView>	
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/dialog_content_color"
		android:orientation="vertical">
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="CCBook"
			android:textSize="28dp"
			android:paddingLeft="10dp"
			android:id="@+id/ccbookstr"
			android:textColor="@drawable/black"
		></TextView>
		
		<TextView
			android:id="@+id/ccbookaboutcontent"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textSize="20dp"
			android:paddingLeft="10dp"
			android:textColor="@drawable/black"
			android:text="@string/aboutCCBookContent"
		></TextView>

			<Button
				android:layout_height="wrap_content"
				android:layout_width="120dp"
				android:text="@string/help"
				android:id="@+id/btnhelp"
				android:layout_gravity="right"
				android:layout_weight="1"
				android:background="@drawable/btn_help_style"
			></Button>

	</LinearLayout>
</LinearLayout>
